ingress/ingress.yaml
# https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer#creating_an_ingress_resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-global-ip
    networking.gke.io/managed-certificates: managed-cert
    ingressClassName: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: demo-nextjs-app-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: demo-fastapi-service
            port:
              number: 80
